logs/09_13_2024/09_13_2024_10_11_38

[ 2024-09-13 10:11:44,217 ] - DEBUG - root - main.py:17 - Initiated Preprocessing Module

[ 2024-09-13 10:11:44,218 ] - DEBUG - root - processDataIngestion.py:11 - Document Ingestion class initialized

[ 2024-09-13 10:11:49,281 ] - DEBUG - root - processDataIngestion.py:33 - Successfully loaded the input file to the memory

[ 2024-09-13 10:11:49,281 ] - DEBUG - root - processEdit.py:10 - Process Edit Message class initialized

[ 2024-09-13 10:11:49,281 ] - DEBUG - root - processJSON.py:25 - JSON Pre-Processing class initiated

[ 2024-09-13 10:11:49,281 ] - DEBUG - root - utils.py:31 - [INFO] : Loading the configuration data

[ 2024-09-13 10:11:49,290 ] - INFO - root - utils.py:37 - Config Yaml loaded succesfully.

[ 2024-09-13 10:11:49,406 ] - DEBUG - root - processEdit.py:85 - Operation on-line extraction has initiated

[ 2024-09-13 10:11:49,406 ] - DEBUG - root - processEdit.py:32 - Started operation on line level adjustment

[ 2024-09-13 10:11:49,406 ] - DEBUG - root - processEdit.py:67 - Forwarding JSON object for futher pre-processing task

[ 2024-09-13 10:11:49,406 ] - DEBUG - root - processJSON.py:437 - Dealing with missing columns and sheets

[ 2024-09-13 10:11:49,424 ] - DEBUG - root - processJSON.py:68 - Started extraction of claim IDs from the input file

[ 2024-09-13 10:11:49,424 ] - DEBUG - root - processJSON.py:241 - Data cleaning task is started

[ 2024-09-13 10:11:49,424 ] - DEBUG - root - processJSON.py:130 - Data type conversion task is started

[ 2024-09-13 10:11:49,807 ] - DEBUG - root - processJSON.py:359 - Working on Hippa Attribute

[ 2024-09-13 10:11:49,815 ] - DEBUG - root - processJSON.py:241 - Data cleaning task is started

[ 2024-09-13 10:11:49,815 ] - DEBUG - root - processJSON.py:130 - Data type conversion task is started

[ 2024-09-13 10:11:50,046 ] - DEBUG - root - processJSON.py:241 - Data cleaning task is started

[ 2024-09-13 10:11:50,054 ] - DEBUG - root - processJSON.py:130 - Data type conversion task is started

[ 2024-09-13 10:11:53,754 ] - DEBUG - root - processJSON.py:387 - Dealing with Raw data from COB

[ 2024-09-13 10:11:53,756 ] - DEBUG - root - processJSON.py:305 - max date replacement task is started

[ 2024-09-13 10:11:53,760 ] - DEBUG - root - processJSON.py:241 - Data cleaning task is started

[ 2024-09-13 10:11:53,764 ] - DEBUG - root - processJSON.py:130 - Data type conversion task is started

[ 2024-09-13 10:11:55,905 ] - DEBUG - root - processJSON.py:241 - Data cleaning task is started

[ 2024-09-13 10:11:55,905 ] - DEBUG - root - processJSON.py:130 - Data type conversion task is started

[ 2024-09-13 10:11:56,391 ] - DEBUG - root - processJSON.py:241 - Data cleaning task is started

[ 2024-09-13 10:11:56,391 ] - DEBUG - root - processJSON.py:130 - Data type conversion task is started

[ 2024-09-13 10:11:57,356 ] - DEBUG - root - processJSON.py:241 - Data cleaning task is started

[ 2024-09-13 10:11:57,360 ] - DEBUG - root - processJSON.py:130 - Data type conversion task is started

[ 2024-09-13 10:11:58,626 ] - DEBUG - root - processJSON.py:241 - Data cleaning task is started

[ 2024-09-13 10:11:58,626 ] - DEBUG - root - processJSON.py:130 - Data type conversion task is started

[ 2024-09-13 10:12:00,505 ] - DEBUG - root - processJSON.py:100 - Data persistance is started

[ 2024-09-13 10:12:00,507 ] - INFO - root - processJSON.py:114 - Data JSON is stored at the location : C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\1_Input_Process\Input_PreProcessing\artifacts\output\24B121111110_wm_invalidproviderselection.json

[ 2024-09-13 10:12:00,507 ] - DEBUG - root - dataFiltration.py:11 - filterData class initialized

[ 2024-09-13 10:12:00,529 ] - DEBUG - root - dataFiltration.py:235 - Got ['24B121111110_wm_invalidproviderselection.json'] for filtering

[ 2024-09-13 10:12:00,536 ] - DEBUG - root - dataFiltration.py:247 - Started filtering 24B121111110_wm_invalidproviderselection

[ 2024-09-13 10:12:00,536 ] - DEBUG - root - dataFiltration.py:180 - Started filtering and appying 2 filter/s

[ 2024-09-13 10:12:00,558 ] - DEBUG - root - dataFiltration.py:137 - applyFilter initialized for input1.providerdetails.npi == 

[ 2024-09-13 10:12:00,597 ] - ERROR - root - main.py:42 - There seems to be a issue in Preprocessing - Traceback (most recent call last):
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\1_Input_Process\Input_PreProcessing\main.py", line 31, in inputPreprocessUnit
    filterObj.getFilteredInputFile(jsonFileName)
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\1_Input_Process\Input_PreProcessing\components\dataFiltration.py", line 255, in getFilteredInputFile
    dataFrames = self.filterInputFile(inputFile, filters)
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\1_Input_Process\Input_PreProcessing\components\dataFiltration.py", line 187, in filterInputFile
    dataFrames = self.applyFilter(dataFrames, filterSheet, filterColumn, operator, actualValue) # applying a filter
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\1_Input_Process\Input_PreProcessing\components\dataFiltration.py", line 160, in applyFilter
    dataFrames[filterSheet] = df[df.apply(lambda row: eval(f"{row[filterColumn]}"+operator+f"{actualValue}"), axis=1)]
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\base39\lib\site-packages\pandas\core\frame.py", line 10361, in apply
    return op.apply().__finalize__(self, method="apply")
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\base39\lib\site-packages\pandas\core\apply.py", line 916, in apply
    return self.apply_standard()
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\base39\lib\site-packages\pandas\core\apply.py", line 1063, in apply_standard
    results, res_index = self.apply_series_generator()
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\base39\lib\site-packages\pandas\core\apply.py", line 1081, in apply_series_generator
    results[i] = self.func(v, *self.args, **self.kwargs)
  File "C:\Users\2332220\OneDrive - Cognizant\Desktop\GenAI_24\0_Experimentals\1_Input_Process\Input_PreProcessing\components\dataFiltration.py", line 160, in <lambda>
    dataFrames[filterSheet] = df[df.apply(lambda row: eval(f"{row[filterColumn]}"+operator+f"{actualValue}"), axis=1)]
  File "<string>", line 1
    ==
    ^
SyntaxError: unexpected EOF while parsing

